[package]
name = "serde-json-file-io"
version = "1.0.3"
edition = "2021"
license = "MIT"
keywords = ["serde_json", "json", "files", "fileio", "serialization"]
categories = ["filesystem"]
description = "A package for writing and reading from/to JSON, Data Structures which implement serde's Serialize and or Deserialize"
readme = "README.md"
repository = "https://github.com/Kleefuchs/serde-json-file-io-rs"


[dependencies]
serde = "1.0.219"
serde_json = "1.0.141"
